chore: add app icons and diag logs; ignore signing artifacts and videos

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@
 # Xcode build logs
 .xcode_build.log
 .xcode_dryrun.log
+
+# Apple signing artifacts (never commit)
+*.certSigningRequest
+*.cer
+*.p12
+*.mobileprovision
+
+# Local test videos
+*.mp4
